frontend/src/Series/Index/Table/SeriesIndexRow.css
.cell {
  composes: cell from '~Components/Table/Cells/VirtualTableRowCell.css';

  display: flex;
  align-items: center;
}

.status {
  composes: cell;

  flex: 0 0 60px;
}

.sortTitle {
  composes: cell;

  flex: 4 0 110px;
}

.seriesType {
  composes: cell;

  flex: 0 0 100px;
}

.banner {
  flex: 0 0 379px;
}

.bannerGrow {
  flex-grow: 1;
}

.link {
  composes: link from '~Components/Link/Link.css';

  position: relative;
  display: block;
  height: 70px;
  background-color: var(--seriesBackgroundColor);
}

.bannerImage {
  width: 379px;
  height: 70px;
}

.overlayTitle {
  position: absolute;
  top: 0;
  left: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 5px;
  width: 100%;
  height: 100%;
  color: var(--offWhite);
  text-align: center;
  font-size: 20px;
}

.network {
  composes: cell;

  flex: 2 0 90px;
}

.originalCountry,
.originalLanguage,
.qualityProfileId {
  composes: cell;

  flex: 1 0 125px;
}

.releaseGroups,
.releaseTypes,
.nextAiring,
.previousAiring,
.added,
.genres {
  composes: cell;

  flex: 0 0 180px;
}

.episodeFileQualities {
  composes: cell;

  flex: 0 0 220px;
}

.seasonCount,
.certification {
  composes: cell;

  flex: 0 0 100px;
}

.seasonFolder {
  composes: cell;

  flex: 0 0 150px;
}

.episodeProgress,
.latestSeason {
  composes: cell;

  display: flex;
  justify-content: center;
  flex: 0 0 150px;
  flex-direction: column;
}

.episodeCount {
  composes: cell;

  flex: 0 0 130px;
}

.year {
  composes: cell;

  flex: 0 0 80px;
}

.path {
  composes: cell;

  flex: 1 0 150px;
}

.sizeOnDisk {
  composes: cell;

  flex: 0 0 120px;
}

.averageSizePerEpisode {
  composes: cell;

  flex: 0 0 160px;
}

.ratings {
  composes: cell from '~Components/Table/Cells/VirtualTableRowCell.css';

  flex: 0 0 80px;
}

.tags {
  composes: cell;

  flex: 1 0 60px;
}

.useSceneNumbering {
  composes: cell;

  flex: 0 0 145px;
}

.monitorNewItems {
  composes: cell;

  flex: 0 0 175px;
}

.actions {
  composes: cell;

  flex: 0 1 90px;
  min-width: 60px;
}

.checkInput {
  composes: input from '~Components/Form/CheckInput.css';

  margin-top: 0;
}

